<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".CharacterCreation">

    <TextView
        android:id="@+id/textViewCSSTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/rpg_dungeon_adventure"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/underTitleCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/character_creation"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCSSTitle" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="#D5E6F1"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underTitleCC">


        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playerLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/player_level"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/character_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/csName"
                android:layout_width="185dp"
                android:layout_height="48dp"
                android:layout_column="1"
                android:background="#fff"
                android:hint="@string/editTextCCName"
                android:padding="5dp"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="138dp"
                android:text="@string/base_stat"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/health_point_hp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textHP"
                android:layout_width="111dp"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/mana_point_mp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textMP"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/strength"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textStrength"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/intelligence"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textIntelligence"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:text="@string/agility"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAgility"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="backMenuScreen"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:allowUndo="true"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>