<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".GameScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewGameScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@color/background_blue"
            android:paddingTop="32dp"
            android:text="@string/rpg_dungeon_adventure"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/underTitleGameScreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/game_screen"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewGameInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3.5"
            android:background="@color/white"
            android:fadingEdge="none"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonOption1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:onClick="button1"
                android:text="@string/option_1" />

            <Button
                android:id="@+id/buttonOption2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:onClick="button2"
                android:text="@string/option_2" />

            <Button
                android:id="@+id/buttonOption3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:onClick="button3"
                android:text="@string/option_3" />

            <Button
                android:id="@+id/buttonOption4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:onClick="button4"
                android:text="@string/option_4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonCharacterSheet"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:onClick="goCharacterSheetScreen"
            android:text="@string/character"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonInventory"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:onClick="goInventoryScreen"
            android:textColor="@color/black"
            android:text="@string/inventroy" />

        <Button
            android:id="@+id/buttonGameMenu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D3D3D3"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/menu" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>