<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCSTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="32dp"
            android:text="@string/rpg_dungeon_adventure"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/underTitleCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="Current character"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/textview_character_stat"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">


            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/level"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/csLevel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:text="@string/player_level"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow

                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/character_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csName"
                    android:layout_width="match_parent"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">
                <TextView
                    android:layout_height="match_parent"
                    android:text="Weapon"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:id="@+id/csWeaponName"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csWeaponDamage"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/base_stat"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:text="@string/health_point_hp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csHP"
                    android:layout_width="111dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:text="@string/damage"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csStrength"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:text="@string/intelligence"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csIntelligence"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:text="@string/stat_point_sp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csSP"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/textview_border">

                <TextView
                    android:id="@+id/textTotalDamage"
                    android:text="@string/total_damage"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/csTotalDamage"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_option"
        android:onClick="backMenuScreenFromCS"
        android:paddingHorizontal="10dp"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:allowUndo="false"
        android:background="@drawable/button_option"
        android:onClick="goGameScreen"
        android:paddingHorizontal="10dp"
        android:text="Play"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>